# mav_regulator

./: CMakeLists.txt  README.md  package.xml
eval_trajs/: trajectory_circle.yaml
include/mav_regulator/: common_functions.hpp  mav_regulator.hpp  performance_eval.hpp
launch/: px4.launch  px4_config.yaml  px4_pluginlists.yaml  regulator.launch  regulator_eval.launch  regulator_flightmare.launch
model/: CMakeLists.txt  quadrotor_mpc_model  quadrotor_mpc_model.cpp
model/quadrotor_mpc_model_codegen/: acado_common.h  acado_integrator.c  acado_solver.c
msg/: BSpline.msg  Bezier.msg  BezierMultiArray.msg  SetPoint.msg
src/: mav_regulator.cpp  mav_regulator_node.cpp  performance_eval.cpp  performance_eval_node.cpp  sitl_test_node.cpp
