CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(quadrotor_mpc_model)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})

IF(CMAKE_COMPILER_IS_GNUCC)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ELSE()
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

FIND_PACKAGE(ACADO REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)

INCLUDE_DIRECTORIES(. ${ACADO_INCLUDE_DIRS})

ADD_EXECUTABLE(quadrotor_mpc_model quadrotor_mpc_model.cpp)
TARGET_LINK_LIBRARIES(quadrotor_mpc_model ${ACADO_SHARED_LIBRARIES})
SET_TARGET_PROPERTIES(quadrotor_mpc_model PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
